Fix layout bug

--- a/css/initial.css
+++ b/css/initial.css
@@ -405,7 +405,6 @@ header h1 em {
  */
 #page-metadata .page-metadata-fields .progress-indicator-icon {
 	margin: 0 0 0 0.25em;
-	top: 0;
 }
 /*	Adjust z-order of text elements.
  */
